updated index.html, change the title

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=initial-scale=1.0">
-    <title>first git-project</title>
+    <title>This is a new title</title>
 </head>
 
 <body>
+    <p>Hello,world</p>
+    <p>Goodbye for now</p>
 
 </body>
 
