Updating index.hmtl file to link css

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>This is a new title</title>
 </head>
 
 <body>
     <p>Hello,world</p>
     <p>Goodbye for now</p>
+    <p>Oh wait i still here</p>
 
 </body>
 
